--- a/Submission.ipynb
+++ b/Submission.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "## Project: **Finding Lane Lines on the Road** \n",
     "***\n",
-    "Project submission, Iker Diez Arancibia  2017/05/29\n",
+    "Project submission,   2017/05/29\n",
     "\n",
     "---\n"
    ]
